argo-cd/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-server
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HttpRoute
    namespace: home-lab
  to:
  - group: ""
    kind: Service
