argo-cd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argo-server
spec:
  parentRefs:
    - name: home-lab
  hostnames:
    - "argo.home.lab"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          namespace: argocd
          port: 443
          weight: 1
